@@ -1,3 +1,9 @@
+2020-12-19  Larus  <larus@Jim-Macbook-Air>
+
+	* CPU/parser.y Tests/tt.bare.s [https://sourceforge.net/p/spimsimulator/bugs/99/]:
+	Missing nops in code generated for pseduo instructions when
+	running with delayed branches.
+
 2020-12-05  Larus  <larus@Jim-Macbook-Air>
 
         * CPU/run.cpp, spim-utils.cpp, reg.h, display-utils.cpp Tests/tt.core.s [https://sourceforge.net/p/spimsimulator/bugs/98/]:
